Update hero background to full height and center footer text ≈

--- a/public/en.html
+++ b/public/en.html
@@ -43,76 +43,55 @@
         <div class="stat">24/7<span>NOC</span></div>
       </div>
     </div>
-
-    <div class="hero-assistant"></div>
   </div>
 </section>
 
 <section class="why">
   <div class="container">
     <p class="why-top">
-      Reliable VoIP infrastructure for businesses with high requirements
-      for call quality, stability and scalability
+      Reliable VoIP infrastructure for businesses
+      with high quality and stability requirements
     </p>
 
     <div class="features">
       <div class="feature-card">
         <div class="icon">📞</div>
         <h3>Premium Call Quality</h3>
-        <p>
-          High ASR / ACD metrics, direct Tier-1 routes and consistently
-          low latency across destinations.
-        </p>
+        <p>Tier-1 routes, high ASR / ACD and low latency.</p>
       </div>
 
       <div class="feature-card">
         <div class="icon">🧠</div>
-        <h3>Smart Call Routing</h3>
-        <p>
-          Intelligent LCR, automatic failover and real-time route
-          optimisation to ensure maximum uptime.
-        </p>
+        <h3>Smart Routing</h3>
+        <p>LCR, automatic failover and route optimisation.</p>
       </div>
 
       <div class="feature-card">
         <div class="icon">🛡️</div>
-        <h3>Security & Fraud Control</h3>
-        <p>
-          TLS / SRTP encryption, advanced anti-fraud tools and full
-          traffic monitoring.
-        </p>
+        <h3>Security</h3>
+        <p>TLS / SRTP encryption and fraud prevention.</p>
       </div>
 
       <div class="feature-card">
         <div class="icon">⚡</div>
         <h3>Fast Onboarding</h3>
-        <p>
-          Quick setup and traffic launch in less than 24 hours,
-          with dedicated technical support.
-        </p>
+        <p>Traffic launch within 24 hours.</p>
       </div>
 
       <div class="feature-card">
         <div class="icon">📊</div>
         <h3>Transparent Billing</h3>
-        <p>
-          Per-second billing, real-time CDR access and clear
-          cost control without hidden fees.
-        </p>
+        <p>Per-second billing and real-time CDR.</p>
       </div>
 
       <div class="feature-card">
         <div class="icon">🌍</div>
         <h3>Global Coverage</h3>
-        <p>
-          High-quality voice termination in 50+ countries with
-          local routing and competitive rates.
-        </p>
+        <p>Voice termination in 50+ countries.</p>
       </div>
     </div>
   </div>
 </section>
-
 
 <section class="contact" id="contact">
   <div class="container">
@@ -120,18 +99,17 @@
     <p class="contact-hint">Leave a request and we’ll contact you 👇</p>
 
     <form class="contact-form">
-      <input type="text" name="name" placeholder="Name" required>
-      <input type="email" name="email" placeholder="Email" required>
-      <input type="text" name="telegram" placeholder="Telegram">
-      <button type="submit" class="btn btn-primary">Send request</button>
+      <input type="text" placeholder="Name" required>
+      <input type="email" placeholder="Email" required>
+      <input type="text" placeholder="Telegram">
+      <button class="btn btn-primary">Send request</button>
     </form>
   </div>
 </section>
 
-<footer class="footer">
-  © 2026 PhoneX Telecom. Confidential.
+<footer class="footer footer-center">
+  © 2026 PhoneX Telecom
 </footer>
 
-<script src="js/main.js"></script>
 </body>
 </html>
