--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,6 @@
         <div class="stat">24/7<span>NOC</span></div>
       </div>
     </div>
-
-    <div class="hero-assistant"></div>
   </div>
 </section>
 
@@ -60,17 +58,17 @@
         <div class="icon">📞</div>
         <h3>Премиальное качество связи</h3>
         <p>
-          Высокие показатели ASR / ACD, прямые Tier-1 маршруты и
-          стабильно низкая задержка по направлениям.
+          Высокие показатели ASR / ACD, прямые Tier-1 маршруты
+          и стабильно низкая задержка.
         </p>
       </div>
 
       <div class="feature-card">
         <div class="icon">🧠</div>
-        <h3>Умная маршрутизация звонков</h3>
+        <h3>Умная маршрутизация</h3>
         <p>
-          Интеллектуальный LCR, автоматический failover и
-          оптимизация маршрутов в реальном времени.
+          Интеллектуальный LCR, failover и оптимизация
+          маршрутов в реальном времени.
         </p>
       </div>
 
@@ -78,8 +76,8 @@
         <div class="icon">🛡️</div>
         <h3>Безопасность и антифрод</h3>
         <p>
-          Шифрование TLS / SRTP, антифрод-системы и
-          полный контроль голосового трафика.
+          TLS / SRTP, антифрод-системы
+          и полный контроль трафика.
         </p>
       </div>
 
@@ -87,8 +85,8 @@
         <div class="icon">⚡</div>
         <h3>Быстрый запуск</h3>
         <p>
-          Подключение и старт трафика менее чем за 24 часа
-          с технической поддержкой.
+          Подключение и старт трафика
+          менее чем за 24 часа.
         </p>
       </div>
 
@@ -96,8 +94,8 @@
         <div class="icon">📊</div>
         <h3>Прозрачный биллинг</h3>
         <p>
-          Посекундная тарификация, CDR в реальном времени
-          и полный контроль затрат.
+          Посекундная тарификация и
+          CDR в реальном времени.
         </p>
       </div>
 
@@ -105,14 +103,13 @@
         <div class="icon">🌍</div>
         <h3>Глобальное покрытие</h3>
         <p>
-          Терминация голосового трафика в 50+ странах
-          с локальным качеством связи и конкурентными тарифами.
+          Терминация в 50+ странах
+          с локальным качеством связи.
         </p>
       </div>
     </div>
   </div>
 </section>
-
 
 <section class="contact" id="contact">
   <div class="container">
@@ -120,18 +117,17 @@
     <p class="contact-hint">Оставьте заявку — мы свяжемся с вами 👇</p>
 
     <form class="contact-form">
-      <input type="text" name="name" placeholder="Имя" required>
-      <input type="email" name="email" placeholder="Email" required>
-      <input type="text" name="telegram" placeholder="Telegram">
-      <button type="submit" class="btn btn-primary">Отправить</button>
+      <input type="text" placeholder="Имя" required>
+      <input type="email" placeholder="Email" required>
+      <input type="text" placeholder="Telegram">
+      <button class="btn btn-primary">Отправить</button>
     </form>
   </div>
 </section>
 
-<footer class="footer">
-  © 2026 PhoneX Telecom. Confidential.
+<footer class="footer footer-center">
+  © 2026 PhoneX Telecom
 </footer>
 
-<script src="js/main.js"></script>
 </body>
 </html>
