Fix main.js absolute path

--- a/public/en.html
+++ b/public/en.html
@@ -110,6 +110,8 @@
 <footer class="footer footer-center">
   © 2026 PhoneX Telecom
 </footer>
+<script src="/js/main.js"></script>
+
 
 </body>
 </html>
